     this (`-F`/`-B`), although default behavior is retained. Note that
     explicit foregrounding mode also keeps `upsdrvctl` tool from exiting
     and would not wait for one driver to complete initialization before
     starting another in case of mass-management loop to start all drivers
     (without specifying the single device) [#1759, #1806, #1875]

 - New `configure --enable-inplace-runtime` option should set default values
   for `--sysconfdir`, `--with-user` and `--with-group` options to match an
   existing NUT deployment -- for users who are trying if a custom build
   of recent codebase solves their practical issues. For "quick tests", a
   shortcut operation `./ci_build.sh inplace` was added [#1714]

 - State tree structure and methods (including "dstate" wrapper for common
   driver internals) was enhanced with time-stamping of last modification
   (setting, changing, deleting the value or some fields in an entry):
   this allows to detect stale information in a centralized fashion [#2010]

 - We lacked log information about changes of chroot jail (uncommon) and
   of UID/GID (everywhere), which makes troubleshooting harder (e.g. lack
   of access to config files or USB device nodes). Now we have it [#1694]

 - huawei-ups2000 is now known to support more devices, noted in docs and
   for auto-detection [#1448, #1684]

 - nutdrv_qx updates:
   * the `voltronic_qs_protocol` should now accept both "V" (as before)
     and newly "H" dialects, which otherwise seem interchangeable [#1623]

 - usbhid-ups updates:
   * cps-hid subdriver now applies same report descriptor fixing logic to
     devices with ProductID 0x0601 as done earlier for 0x0501, to get the
     correct output voltage data [#1497]
   * apc-hid subdriver now also supports ProductID 0x0004 [#1429]
   * the `usbhid-ups` driver should now reconnect if `libusb` returned a
     memory allocation error [#1422] (seen as "Can't retrieve Report 0a: